--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -202,7 +202,9 @@
         }
 
         .dropdown-item:hover {
-            background-color: #f7f7f7;
+            background-color: #BBE1FA;
+            color: #0F4C75;
+            border-radius: 20px;
         }
 
         .dropdown-item:last-child {
@@ -339,18 +341,19 @@
 
         <!-- ----------------------------------------------------------------------- -->
         <div class="container" style="width: 90%;">
-            <!-- ----------------------------------------------------------------------- -->
-            <div class="section"
-                data-faq="Projects by UITS Students. Let me know if you're working on something and are okay with sharing it, I'll happily list them here.|: )">
-                <div class="faq-icon">?</div>
-                <div class="faq-box"></div>
-            </div>
-            <!-- ----------------------------------------------------------------------- -->
+
             <!-- <h1>UITS-Projects Collection</h1> -->
+            
             <font size="5">
                 <p align="center">UITS-Projects Collection</p>
             </font>
-
+<!-- ----------------------------------------------------------------------- -->
+<div class="section" style="margin-top: -30px;margin-bottom: 50px;"
+data-faq="Projects by UITS Students. Let me know if you're working on something and are okay with sharing it, I'll happily list them here.|: )">
+<div class="faq-icon">?</div>
+<div class="faq-box"></div>
+</div>
+<!-- ----------------------------------------------------------------------- -->
             <!-- Dropdown-1 -->
             <div class="dropdown-container resources" style="border-radius: 20px;">
                 <div class="dropdown-header" style="background-color: #1B262C;">Resource Projects</div>
@@ -400,23 +403,43 @@
                         <div class="description">Thermal systems, dynamics, and manufacturing</div>
                     </a> -->
                     <div style="text-align: center;" class="feature-list">
-                        <p style="margin-bottom: 5px; color:rgba(60, 60, 82, 0.733);"  >WAD projects of Batch 54
-                            <br>(highlights)
-                        
-                        <ul
-                            style="color:rgba(60, 60, 82, 0.733); list-style-position: inside; padding-left: 0;">
+                        <p
+                            style="margin-bottom: 5px; font-size: medium;font-style: italic;font-style: bold;text-align: left;padding: 15px 20px;">
+                            WAD projects of Batch 54 (highlights)
+                        <div style="font-size: small;margin: auto;" class="feature-list">
+                            <!-- <li> -->
+                            <a style="color:rgba(60, 60, 82, 0.733);"
+                                href="https://shoytanbaba99.github.io/Just-Another-Typing-Test/" target="_blank"
+                                class="dropdown-item">Md. Masud Rahman (432320005101064)</a>
+                            <!-- </li> -->
+                            <!-- <li> -->
+                            <a style="color:rgba(60, 60, 82, 0.733);"
+                                href="https://github.com/UnknownRifah/EventPlanner" target="_blank"
+                                class="dropdown-item">Rifah
+                                Nanjiba Borno (432320005101083)</a>
+                            <!-- </li> -->
+                            <!-- <li> -->
+                            <a style="color:rgba(60, 60, 82, 0.733);"
+                                href="https://fahimhossain1085.github.io/web-application-design-project/"
+                                target="_blank" class="dropdown-item">Md. Fahim Hossain (432320005101085)</a>
+                            <!-- </li> -->
+
+
+                        </div>
+                        <!-- <ul style="color:rgba(60, 60, 82, 0.733); list-style-position: inside; padding-left: 0;">
                             <li><a style="color:rgba(60, 60, 82, 0.733);"
-                                    href="https://shoytanbaba99.github.io/Just-Another-Typing-Test/"
-                                    target="_blank" class="dropdown-item">Md. Masud Rahman (432320005101064)</a></li>
+                                    href="https://shoytanbaba99.github.io/Just-Another-Typing-Test/" target="_blank"
+                                    class="dropdown-item">Md. Masud Rahman (432320005101064)</a></li>
                             <li><a style="color:rgba(60, 60, 82, 0.733);"
-                                    href="https://github.com/UnknownRifah/EventPlanner" target="_blank" class="dropdown-item">Rifah
+                                    href="https://github.com/UnknownRifah/EventPlanner" target="_blank"
+                                    class="dropdown-item">Rifah
                                     Nanjiba Borno (432320005101083)</a></li>
                             <li><a style="color:rgba(60, 60, 82, 0.733);"
                                     href="https://fahimhossain1085.github.io/web-application-design-project/"
                                     target="_blank" class="dropdown-item">Md. Fahim Hossain (432320005101085)</a></li>
-                        </ul>
-                    </p>
-                </div>
+                        </ul> -->
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -600,9 +623,9 @@
 
         <div style="justify-content: center;display:flex;">
             <hr
-              style="border: 5px solid rgba(0, 0, 0, 0.619);
+                style="border: 5px solid rgba(0, 0, 0, 0.619);
               border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 30px;min-width: 200px;width:50%;max-width: 500px;;">
-          </div>
+        </div>
 
         <div class="university-resources" align="center">
             <font size="5">
@@ -610,7 +633,7 @@
             </font>
 
             <!-- ----------------------------------------------------------------------- -->
-            <div class="section"
+            <div class="section" style="margin-top: -30px;margin-bottom: 50px;"
                 data-faq="Projects by the Students of other Universities and Facilities employed by the University website.">
                 <div class="faq-icon">?</div>
                 <div class="faq-box"></div>
