--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -356,7 +356,7 @@ data-faq="Projects by UITS Students. Let me know if you're working on something 
 <!-- ----------------------------------------------------------------------- -->
             <!-- Dropdown-1 -->
             <div class="dropdown-container resources" style="border-radius: 20px;">
-                <div class="dropdown-header" style="background-color: #1B262C;">Resource Projects</div>
+                <div class="dropdown-header" style="background-color: #1B262C;"><p></p>Resource Projects</div>
                 <div class="dropdown-content-1">
                     <a href=" http://akibreza.github.io/uitsBOT" target="_blank" class="dropdown-item">UITS Utility App
                         "uitsBOT"
@@ -381,7 +381,7 @@ data-faq="Projects by UITS Students. Let me know if you're working on something 
 
             <!-- Dropdown-2 -->
             <div class="dropdown-container courses" style="border-radius: 20px;">
-                <div class="dropdown-header" style="background-color: #1B262C;">Other Projects</div>
+                <div class="dropdown-header" style="background-color: #1B262C;"><p></p>Other Projects</div>
                 <div class="dropdown-content-1">
                     <a href="https://github.com/tahmidnasiftamal/DataMiningProject" target="_blank"
                         class="dropdown-item">Search Engine for Data Mining "DataMiningProject"
