--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
   </div>
 
   <!-- -------------------------------------------------------------------- -->
-  <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #1B262C;margin-top: 40px;">
+  <div class="container-5"
+    style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #1B262C;margin-top: 40px;">
 
 
     <p style="text-align: center;color: #ffffffcd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
@@ -387,7 +388,7 @@
   </p>
 
   <div class="section"
-    data-faq="Academics are all about CGPA, but Job Markets ask more from you.||Are you willing to put the effort?">
+    data-faq="Academics are all about CGPA, but Job Market ask more from you.||Are you willing to put the effort?">
     <div class="faq-icon">?</div>
     <div class="faq-box"></div>
   </div>
