moved cp books to programming

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -31,8 +31,8 @@
             /*the button visibility*/
             position: relative;
             /* background-color: #000000c5; */
-            column-gap: 7%;
-            row-gap: 12%;
+            column-gap: 5%;
+            row-gap: 4%;
 
         }
 
@@ -393,37 +393,51 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
-<br>
+    <br>
     <p align="center"><a href="https://www.geeksforgeeks.org/bitsstdc-h-c/" target="_blank"
-    style="color: rgba(0, 0, 0, 0.649);"><i>#include &ltbit/stdc++.h&gt</i></a></p>
+            style="color: rgba(0, 0, 0, 0.649);"><i>#include &ltbit/stdc++.h&gt</i></a></p>
 
 
-    <div class="container-6" style="max-width: 500px;background-color: #00000000;margin-bottom: 50px;">
+    <div class="container-6" style="max-width: 400px;background-color: #1b262c00;justify-content: center;">
         <div class="menu-button" id="menuButton1" align="center"
-            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
+            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
             <p class="cell-link" align="center"
                 style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Learning Websites
             </p>
         </div>
-        <div class="menu-button" id="menuButton2" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
-            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Programming Videos
-            </p>
-        </div>
         <div class="menu-button" id="menuButton4" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
-            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
+            <p class="cell-link" align="center"
+                style="color: rgb(255, 255, 255);margin:auto;pbackground-color: #00000000;">
                 Online Judges</b>
             </p>
         </div>
-        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:200px;">
-            <a class="cell-link" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;"
+        <div class="menu-button" id="menuButton2" align="center"
+            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
+            <p class="cell-link" align="center"
+                style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">Programming
+                Videos
+            </p>
+        </div>
+        
+        <div class=" menu-button" align="center"
+            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
+            <a class="cell-link" href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
+                target="_blank" style="color: rgb(255, 255, 255);margin:auto;background-color: #00000000;">
+                Programming References
+            </a>
+        </div>
+        <div class=" menu-button" align="center"
+            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
+            <a class="cell-link" style="color: #ffffff;margin:auto;background-color: #00000000;text-shadow: 1px 1px 1px  #1B262C;"
                 href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                 target="_blank">
                 UITS Contests Archive
             </a>
         </div>
+        <div></div>
+        <hr style="color: #00000000;">
     </div>
 
     <!-- IFRAME BEFORE POPUP MENU -->
