--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -429,7 +429,7 @@
             </a>
         </div>
         <div class=" menu-button" align="center"
-            style="background-color: rgb(49, 54, 58);height:60px;width:100px;font-size:medium;max-width: 300px;">
+            style="background-color: #1E3E62;height:60px;width:100px;font-size:medium;max-width: 300px;">
             <a class="cell-link" style="color: #ffffff;margin:auto;background-color: #00000000;text-shadow: 1px 1px 1px  #1B262C;"
                 href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                 target="_blank">
