no clue what I did here

--- a/page-depth-01/PDF.html
+++ b/page-depth-01/PDF.html
@@ -103,8 +103,15 @@
         </a>
     </div>
     
+    
+
     <div class="container-5" style="justify-content: center;display: flex; max-width: 100%;">
-        <embed src="https://drive.google.com/file/d/1lBwg4NTMbaYCSU2Bot_xZsnIK505BRPm/preview?usp=sharing" height=600px width=100% title="Iframe Example" style="border-radius: 5px;"></iframe>
+        <object class="pdf" 
+    data=
+"https://drive.google.com/file/d/1lBwg4NTMbaYCSU2Bot_xZsnIK505BRPm/preview?usp=sharing"
+height=600px width=100%>
+</object>
+        <!-- <embed src="https://drive.google.com/file/d/1lBwg4NTMbaYCSU2Bot_xZsnIK505BRPm/preview?usp=sharing" height=600px width=100% title="Iframe Example" style="border-radius: 5px;"></iframe> -->
     </div>
     <br>
 
