--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -515,29 +515,29 @@
     <!-- 1st popup menu -->
     <div class=" popup-menu" id="popupMenu1" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
-        <!-- <div class="popup-menu-title">Content Creators</div> -->
+        <div class="popup-menu-title"><a href="https://github.com/b1tranger/oUITS-Resources/tree/main/installers" target="_blank" style="color: white;">Direct Download</a></div>
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">People I Follow</div> -->
                 <div class="link-item">
-                    <a href="https://github.com/Tichau/FileConverter/releases/tag/v2.1 "
+                    <a href="https://github.com/Tichau/FileConverter/releases"
                         target="_blank">FileConverter</a>
                 </div>
                 <div class="link-item">
                     <a href="https://handbrake.fr/downloads.php  " target="_blank">handbrake</a>
                 </div>
                 <div class="link-item">
-                    <a href="https://github.com/microsoft/PowerToys/releases/tag/v0.88.0"
+                    <a href="https://github.com/microsoft/PowerToys/releases"
                         target="_blank">ms-PowerToys</a>
                 </div>
                 <div class="link-item">
-                    <a href="#" target="_blank">
-                        #
+                    <a href="https://www.win-rar.com/postdownload.html?&L=0" target="_blank">
+                        WinRAR
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="#" target="_blank">
-                        #
+                    <a href="https://www.revouninstaller.com/start-freeware-download/" target="_blank">
+                        Revo Uninstaller
                     </a>
                 </div>
                 <div class="link-item">
