updated with latest files

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
 <body style="background-color: #333;">
 
-  <div id="preloader">
+  <div id="preloader" style="margin-top: -20px;">
     <img src="images/preloader.gif" alt="Loading..." width="200">
   </div>
 
-  <div
-    style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
+  <!-- <div  style="background-color: #333;"> -->
+  <div style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
 
     <!-- TOP BAR -->
 
@@ -418,7 +418,30 @@
 
       <!-- -------------------------------------------------------- -->
       <br>
-
+      <!-- <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> -->
 
 
       <div style="justify-content: center;display:flex;">
@@ -543,7 +566,7 @@
                 document.getElementById("preloader").style.display = "none";
                 document.getElementById("content").style.display = "block";
                 document.getElementById("content").classList.add("fade-in");
-              }, 800); // Match fade-out duration
+              }, 1000); // Match fade-out duration
             }, preloaderDelay);
           };
         }
@@ -551,13 +574,12 @@
 
 
     </div>
-  </div>
 
-  <div class="navbar-5">
-    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
-    </font>
+    <div class="navbar-5">
+      <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+      </font>
 
-  </div>
+    </div>
 
 
 </body>
