--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -108,7 +108,7 @@
                 <td>
                     <a href="https://drive.google.com/drive/folders/1WbxkGhlKC84ps7r2Ekqs0-Pggq9twvGT?usp=drive_link"
                         target="_blank" class="cell-link">
-                        DMBS<br><small>CSE0612215 + CSE0612216</small>
+                        DBMS<br><small>CSE0612215 + CSE0612216</small>
                     </a>
                 </td>
 
