--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -578,13 +578,13 @@
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <br>
-                <div class="link-item">
+                <!-- <div class="link-item">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1qW2d5epe3XeFy0hbFuQoGd7rfRZsvkFr?usp=drive_link"
                         target="_blank">
                         Routine by Section
                     </a>
-                </div>
+                </div> -->
                 <div class="link-item">
                     <a href="Routine -Spring 2025(CSE) updated.pdf" download>
                         CSE Class Routine<br><small>(Download)</small>
