--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -400,10 +400,10 @@
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info
                     here</p>
             </tr>
-            <tr style="margin-top: 0px;">
+            <tr style="margin-top: 0px;margin-bottom: 5px;">
 
                 <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;min-width: 200px;width:70%">
+                      border-radius: 5px;min-width: 200px;width:70%;">
                 <div class="container-6"
                     style="background-color: #00000000;margin: auto;justify-content: center;column-gap: 10%;">
 
@@ -413,96 +413,52 @@
                             Notice</b>
                         </p>
                     </div>
-                    <div class="menu-button" id="menuButton3" align="center"
+                    <div class="menu-button" id="menuButton2" align="center"
                         style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
                         <p class="cell-link" align="center"
                             style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                             Class Routine
                         </p>
                     </div>
-                    <div class="menu-button" id="menuButton4" align="center"
+                    <div class="menu-button" id="menuButton3" align="center"
                         style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
                         <p class="cell-link" align="center"
                             style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                             Drive by Dept.
                         </p>
                     </div>
+                    <div class="menu-button" id="menuButton4" align="center"
+                        style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                        <p class="cell-link" align="center"
+                            style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                            Questions
+                        </p>
+                    </div>
+                    <div class="menu-button" id="menuButton5" align="center"
+                        style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                        <p class="cell-link" align="center"
+                            style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                            Courses
+                        </p>
+                    </div>
+                    <div class="menu-button" align="center"
+                        style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;font-size:medium;max-width: 300px;">
+                        <a class="cell-link"
+                            href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
+                            target="_blank"
+                            style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                            Task Materials
+                        </a>
+
+                    </div>
                 </div>
                 <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:70%;margin-top: 30px;">
+                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:70%;margin-top: 80px;">
 
 
             </tr>
 
-            <tr>
-
-                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link"
-                        href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
-                        target="_blank" style="padding: 10%;">
-                        University Questions
-                    </a>
-                </td>
-
-                <!-- <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link"
-                        href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
-                        target="_blank" style="padding: 10%;">
-                        CSE Course Lists
-                    </a>
-
-                </td> -->
-            </tr>
-            <tr>
-                <!-- <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
-                        target="_blank" style="padding: 10%;">
-                        CSE Course Outlines
-                    </a>
-
-                </td> -->
-                <!-- <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
-                        target="_blank" style="padding: 10%;">
-                        Departments info
-                    </a>
-                </td> -->
-
-            </tr>
-            <tr>
-                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link"
-                        href="https://drive.google.com/drive/folders/1_pK1GknO6Gr8iLQtNPZ8zHB9RWauC-Z2?usp=drive_link"
-                        target="_blank" style="padding: 10%;">
-                        Elective Courses
-                    </a>
-                </td>
-                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
-                        target="_blank" style="padding: 10%;">
-                        Task Materials
-                    </a>
-                </td>
-
-
-            </tr>
-            <tr>
-                <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link"
-                        href="https://drive.google.com/drive/u/7/folders/1o3Wwzq8YWwqV-GUtHB0LAWHud9vg__S9"
-                        target="_blank" style="padding: 10%;">
-                        Archived Courses
-                    </a>
-                </td>
-                <!-- <td style="margin-left: auto;width:250px;max-height:80px;padding: 2%;">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
-                        target="_blank" style="padding: 10%;">
-                        Task Materials
-                    </a>
-                </td> -->
-
-
-            </tr>
+            
 
         </table>
     </div>
@@ -539,35 +495,10 @@
         </div>
     </div>
 
-    <!-- 2nd popup menu -->
-    <!-- <div class="popup-menu" id="popupMenu2"
-        style="max-width: 250px;background-color: #424242;border-radius:  50px 50px 50px 50px;">
-        <div class="popup-close popup-close-btn"></div>
-        <div class="popup-menu-categories">
-            <div class="popup-menu-category" align="center">
-                <br>
-                <div class="link-item"
-                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
-                    <a href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
-                        style="color: #424242;padding-top:15%">
-                        <strong>Upload Questions</strong><br>
-                        <i style="font-size: x-small;">(Single Upload)</i>
-                    </a>
-                </div>
-                <div class="link-item"
-                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
-                    <a class="cell-link"
-                        href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
-                        target="_blank" style="color: #424242;">
-                        <strong>See All Questions<br>in Google Drive</strong>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
-    <!-- 3rd popup menu -->
-    <div class="popup-menu" id="popupMenu3" style="max-width: 400px; width: 60%;">
+
+    <!-- 2nd popup menu -->
+    <div class="popup-menu" id="popupMenu2" style="max-width: 400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <div class="popup-menu-title">
             <a href="https://drive.google.com/drive/folders/1NMg91di-2WhGahidZT2JpDhno-M6f2as?usp=drive_link"
@@ -602,8 +533,8 @@
         </div>
     </div>
 
-<!-- 4th popup menu -->
-    <div class="popup-menu" id="popupMenu4" style="max-width: 400px; width: 60%;">
+    <!-- 3rd popup menu -->
+    <div class="popup-menu" id="popupMenu3" style="max-width: 400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <div class="popup-menu-title">
             <a href="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp?usp=drive_link"
@@ -623,55 +554,64 @@
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://drive.google.com/drive/folders/1qvZVmexbXFNxPOXQKxmU76Q78u5FCopk?usp=drive_link" target="_blank">
-                       CE
+                    <a href="https://drive.google.com/drive/folders/1qvZVmexbXFNxPOXQKxmU76Q78u5FCopk?usp=drive_link"
+                        target="_blank">
+                        CE
                     </a>
                 </div>
 
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qXPjm6AXVSdzEO-nop087pTduYOxcbqA?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qXPjm6AXVSdzEO-nop087pTduYOxcbqA?usp=drive_link"
                         target="_blank">
                         IT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qw3B55_boUaEZccB6I0BL_UJtFx3CV0G?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qw3B55_boUaEZccB6I0BL_UJtFx3CV0G?usp=drive_link"
                         target="_blank">
                         EEE
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qa99IPRgK9uvawq7HBi06kFF73RpK-lU?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qa99IPRgK9uvawq7HBi06kFF73RpK-lU?usp=drive_link"
                         target="_blank">
                         BBA
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qXUv2p20aCqAqdV6gjQDDd-ozNRt_QmO?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qXUv2p20aCqAqdV6gjQDDd-ozNRt_QmO?usp=drive_link"
                         target="_blank">
                         English
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qZhO00mgfEhA1PbSemKZQyuOXZdOAMgM?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qZhO00mgfEhA1PbSemKZQyuOXZdOAMgM?usp=drive_link"
                         target="_blank">
                         Social Work
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qj7cGdZRTcXnE-OUrMPaky1Q7g1KrUZ0?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qj7cGdZRTcXnE-OUrMPaky1Q7g1KrUZ0?usp=drive_link"
                         target="_blank">
                         Pharmacy
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qcI6ZQsCjZVxFy_i-qYHF-V3c5nFG0xH?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qcI6ZQsCjZVxFy_i-qYHF-V3c5nFG0xH?usp=drive_link"
                         target="_blank">
                         ECE
                     </a>
                 </div>
                 <div class="link-item">
-                    <a class="cell-link" href="https://drive.google.com/drive/folders/1qbGeZGHzadbF6e5DBBs4J13PDr1JbmkE?usp=drive_link"
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1qbGeZGHzadbF6e5DBBs4J13PDr1JbmkE?usp=drive_link"
                         target="_blank">
                         Law
                     </a>
@@ -687,15 +627,82 @@
         </div>
     </div>
 
+    <!-- 4th popup menu -->
+    <div class="popup-menu" id="popupMenu4"
+        style="max-width: 250px;background-color: #424242;border-radius:  50px 50px 50px 50px;">
+        <div class="popup-close popup-close-btn"></div>
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category" align="center">
+                <br>
+                <div class="link-item"
+                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
+                    <a href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
+                        style="color: #424242;padding-top:15%">
+                        <strong>Upload Questions</strong><br>
+                        <i style="font-size: x-small;">(Single Upload)</i>
+                    </a>
+                </div>
+
+                <div class="link-item"
+                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
+                        target="_blank" style="color: #424242;">
+                        <strong>All University Questions</strong>
+                    </a>
+                </div>
+                <div class="link-item"
+                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
+                    <a class="cell-link" href="Semesters.html" style="color: #424242;">
+                        <strong>Browse Questions By Course</strong>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- 5th popup menu -->
+    <div class="popup-menu" id="popupMenu5" style="max-width: 400px; width: 60%;">
+        <div class="popup-close popup-close-btn"></div>
+        <!-- <div class="popup-menu-title">Content Creators</div> -->
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category" align="center">
+                <!-- <div class="category-title">People I Follow</div> -->
+                <div class="link-item">
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/folders/1_pK1GknO6Gr8iLQtNPZ8zHB9RWauC-Z2?usp=drive_link"
+                        target="_blank" style="padding: 10%;">
+                        Elective Courses
+                    </a>
+                </div>
+                <!-- <div class="link-item">
+                    <a href="http://ucam.uits.edu.bd/StudentManagement/Profile/StudentProfile.aspx?" target="_blank">
+                        UCAM-Notice
+                    </a>
+                </div> -->
+                <div class="link-item">
+                    <a class="cell-link"
+                        href="https://drive.google.com/drive/u/7/folders/1o3Wwzq8YWwqV-GUtHB0LAWHud9vg__S9"
+                        target="_blank" style="padding: 10%;">
+                        Archived Courses
+                    </a>
+                </div>
+                <!-- More links here -->
+            </div>
+        </div>
+    </div>
+
     <div class="popup-backdrop" id="popupBackdrop"></div>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Button and popup pairs
             const menuPairs = [
                 { button: 'menuButton1', popup: 'popupMenu1' },
-                // { button: 'menuButton2', popup: 'popupMenu2' },
+                { button: 'menuButton2', popup: 'popupMenu2' },
                 { button: 'menuButton3', popup: 'popupMenu3' },
-                { button: 'menuButton4', popup: 'popupMenu4' }
+                { button: 'menuButton4', popup: 'popupMenu4' },
+                { button: 'menuButton5', popup: 'popupMenu5' }
                 // Add more pairs as needed
             ];
 
