--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -458,7 +458,7 @@
 
             </tr>
 
-            
+
 
         </table>
     </div>
@@ -643,6 +643,13 @@
                     </a>
                 </div>
 
+
+                <div class="link-item"
+                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
+                    <a class="cell-link" href="Semesters.html" style="color: #424242;">
+                        <strong>Browse Questions By Course</strong>
+                    </a>
+                </div>
                 <div class="link-item"
                     style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
                     <a class="cell-link"
@@ -651,13 +658,6 @@
                         <strong>All University Questions</strong>
                     </a>
                 </div>
-                <div class="link-item"
-                    style="background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 200px;box-shadow: 1px 2px 10px #000000;">
-                    <a class="cell-link" href="Semesters.html" style="color: #424242;">
-                        <strong>Browse Questions By Course</strong>
-                    </a>
-                </div>
-
             </div>
         </div>
     </div>
@@ -669,6 +669,11 @@
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">People I Follow</div> -->
+                <div class="link-item">
+                    <a class="cell-link" href="Semesters.html" style="padding: 10%;">
+                        Browse Cources By Course
+                    </a>
+                </div>
                 <div class="link-item">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1_pK1GknO6Gr8iLQtNPZ8zHB9RWauC-Z2?usp=drive_link"
